--- a/Brewery-Tracker/Brewery-Tracker/Views/Home/About.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/Home/About.cshtml
@@ -1,7 +1,18 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+
+
+<section class="hero is-dark">
+    <div class="hero-body">
+        <div class="container">
+            <h1 class="title name-font brand">
+                About Us
+            </h1>
+            <h2 class="subtitle">
+                We're something something something, breweries, bros, and beers.
+            </h2>
+        </div>
+    </div>
+</section>
