--- a/Brewery-Tracker/Brewery-Tracker/Views/Home/Index.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/Home/Index.cshtml
@@ -1,14 +1,14 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-<section class="hero is-light is-large">
+<section class="hero is-dark is-medium">
     <div class="hero-body">
         <div class="container">
-            <h1 class="title">
-                Large title
+            <h1 class="title name-font brand">
+                Brewery Tracker
             </h1>
             <h2 class="subtitle">
-                Large subtitle
+                Something something something.... Beer!
             </h2>
         </div>
     </div>
