--- a/Brewery-Tracker/Brewery-Tracker/Views/Home/Login.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/Home/Login.cshtml
@@ -2,16 +2,29 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<section class="hero is-dark">
+    <div class="hero-body">
+        <div class="container">
+            <h1 class="title name-font brand">
+                Welcome back, Friend!
+            </h1>
+            @*<h2 class="subtitle">
+               Your favorite breweries and beers are calling!
+            </h2>*@
+        </div>
+    </div>
+</section>
+
 <div class="columns is-centered">
     <div class="column is-half">
 
 
         <div class="card top-bot-space">
-            <header class="card-header">
+            @*<header class="card-header">
                 <p class="card-header-title">
-                    Create an Account
+                    Welcome Back
                 </p>
-            </header>
+            </header>*@
             <div class="card-content">
                 <div class="content">
 
