--- a/Brewery-Tracker/Brewery-Tracker/Views/Home/Signup.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/Home/Signup.cshtml
@@ -2,8 +2,20 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<section class="hero is-dark">
+    <div class="hero-body">
+        <div class="container">
+            <h1 class="title name-font brand">
+                Sign Up
+            </h1>
+            <h2 class="subtitle">
+                Create an account to follow your favorite breweries and beers.
+            </h2>
+        </div>
+    </div>
+</section>
 
-<section class="hero is-light">
+@*<section class="hero is-light">
     <div class="hero-body">
         <div class="container">
             <h1 class="title">
@@ -14,7 +26,7 @@
             </h2>
         </div>
     </div>
-</section>
+</section>*@
 
 <div class="container">
 
