--- a/Brewery-Tracker/Brewery-Tracker/Views/Shared/_Layout.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/Shared/_Layout.cshtml
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
 </head>
 <body>
     <!-- NAVIGATION -->
     <nav class="navbar is-transparent">
         <div class="navbar-brand">
-            <a class="navbar-item" href=".">
+            <a class="navbar-item name-font brand" href=".">
                Brewery Tracker
             </a>
             <div class="navbar-burger burger" data-target="hiddenNavigation">
