--- a/Brewery-Tracker/Brewery-Tracker/Views/Home/About.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/Home/About.cshtml
@@ -12,6 +12,9 @@
             </h1>
             <h2 class="subtitle">
                 We're something something something, breweries, bros, and beers.
+
+                Bro beers bro bro bro..
+
             </h2>
         </div>
     </div>
