--- a/Brewery-Tracker/Brewery-Tracker/Views/Shared/_Layout.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/Shared/_Layout.cshtml
@@ -27,6 +27,8 @@
                 <a>@Html.ActionLink("Home", "Index", "Home", null, new { @class = "navbar-item item-line" })</a>
                 <a>@Html.ActionLink("About", "About", "Home", null, new { @class = "navbar-item item-line" })</a>
                 <a>@Html.ActionLink("Contact", "Contact", "Home", null, new { @class = "navbar-item item-line" })</a>
+                <a>@Html.ActionLink("Breweries", "Breweries", "Home", null, new { @class = "navbar-item item-line" })</a>
+                <a>@Html.ActionLink("Beers", "Beers", "Home", null, new { @class = "navbar-item item-line" })</a>
             </div>
 
             <div class="navbar-end">
