--- a/Brewery-Tracker/Brewery-Tracker/Views/Home/Login.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/Home/Login.cshtml
@@ -16,7 +16,7 @@
 </section>
 
 <div class="columns is-centered">
-    <div class="column is-half">
+    <div class="column is-4">
 
 
         <div class="card top-bot-space">
