Fixed Brewery/Beers routes, added a Razor copy right date to footer

--- a/Brewery-Tracker/Brewery-Tracker/Views/Shared/_Layout.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/Shared/_Layout.cshtml
@@ -72,6 +72,9 @@
                     <p>
                         <strong>Brewery Tracker</strong> by <a href="#">Ian Arsenault</a> and <a href="#">Jameson Arsenault</a>.
                     </p>
+                    <p>
+                        &copy; @DateTime.Now.Year -- Arsenault Brothers Inc.
+                    </p>
                 </div>
             </div>
         </footer>
