--- a/Brewery-Tracker/Brewery-Tracker/Views/Shared/_Layout.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/Shared/_Layout.cshtml
@@ -60,7 +60,10 @@
     <!-- END NAVIGATION -->
 
     <div>
-
+        <div class="alert-block">
+            <span class="tag is-warning is-medium maintenance">Website is currently under maintence as of @DateTime.Now.ToShortDateString()</span>
+        </div>
+        
         <!-- CONTENT -->
         @RenderBody()
         <!-- END CONTENT -->
