--- a/Brewery-Tracker/Brewery-Tracker/Views/Home/Beers.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/Home/Beers.cshtml
@@ -18,3 +18,39 @@
     </div>
 </section>
 
+
+<section class="beer-of-the-day">
+    <div class="beer-of-the-day-body">
+        <div class="container">
+            <div class="columns is-1 is-multiline">
+                <div class="column is-9 is-offset-2">
+                    <h1 class="title is-1">Beer of the Day @DateTime.Today.ToLongDateString()</h1>
+                </div>
+                <div class="column is-three-fifths is-offset-one-fifth">
+                    <div class="card">
+                        <div class="card-image">
+                            <figure class="image is-4by3">
+                                <img src="../Images/allagash-curieux.jpg" alt="Beer of the Day Image">
+                            </figure>
+                        </div>
+                        <div class="card-content">
+                            <div class="media">
+                                <div class="media-content">
+                                    <p class="title is-6">Beer Name Here</p>
+                                </div>
+                            </div>
+
+                            <div class="content">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                Phasellus nec iaculis mauris.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
