--- a/Brewery-Tracker/Brewery-Tracker/Views/Home/Signup.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/Home/Signup.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
+  
 }
 
 <section class="hero is-dark">
@@ -14,19 +15,6 @@
         </div>
     </div>
 </section>
-
-@*<section class="hero is-light">
-    <div class="hero-body">
-        <div class="container">
-            <h1 class="title">
-                Sign Up
-            </h1>
-            <h2 class="subtitle">
-                Create an account to follow your favorite breweries and beers.
-            </h2>
-        </div>
-    </div>
-</section>*@
 
 <div class="container">
 
@@ -123,10 +111,11 @@
                                 <div class="field has-addons has-addons-left">
                                     <div class="control is-expanded">
                                         <div class="select is-fullwidth">
-                                            <select>
-                                                <option>Select a state</option>
-                                                <option>With states..</option>
-                                            </select>
+                                            @*'https://stackoverflow.com/questions/6333270/populate-html-dropdownlist-with-a-liststring-using-mv'c*@
+
+                                            @Html.DropDownList("states", new SelectList(ViewBag.States, Model))
+                                          
+                              
                                         </div>
                                     </div>
                                     <div class="control">
