--- a/Brewery-Tracker/Brewery-Tracker/Views/Home/Beers.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/Home/Beers.cshtml
@@ -36,7 +36,7 @@
                     <h1 class="title is-1">Beer of the Day @DateTime.Today.ToLongDateString()</h1>
                 </div>*@
                 <div class="column is-three-fifths is-offset-one-fifth">
-                  
+                  <!--Comment for something-->
                     <div class="card">
                         <div class="card-image">
                             <figure class="image is-4by3">
