--- a/Brewery-Tracker/Brewery-Tracker/Views/Home/About.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/Home/About.cshtml
@@ -12,10 +12,69 @@
             </h1>
             <h2 class="subtitle">
                 We're something something something, breweries, bros, and beers.
-
-                Bro beers bro bro bro..
-
             </h2>
         </div>
     </div>
 </section>
+
+<div class="container">
+    <div class="content top-bot-space">
+        <h1 class="title is-1">What We're About</h1>
+
+        <div class="columns is-centered">
+            <div class="column is-8">
+                <figure class="image">
+                    <img src="https://images.unsplash.com/photo-1492955509702-333ba94989e0?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=d403c556beed3f7e7cb5f9e0c594dcbb&auto=format&fit=crop&w=1350&q=80">
+                </figure>
+            </div>
+        </div>
+
+        <div class="columns is-centered">
+            <div class="column is-4">
+                <div class="card">
+                    <div class="card-image">
+                        <figure class="image is-4by3">
+                            <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                        </figure>
+                    </div>
+                    <div class="card-content">
+                        <h2 class="title is-2 has-text-centered">Ian Arsenault</h2>
+                        <div class="content">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Phasellus nec iaculis mauris.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="column is-4">
+                <div class="card">
+                    <div class="card-image">
+                        <figure class="image is-4by3">
+                            <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                        </figure>
+                    </div>
+                    <div class="card-content">
+                        <h2 class="title is-2 has-text-centered">Jameson Arsenault</h2>
+
+                        <div class="content">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Phasellus nec iaculis mauris. 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+   
+        <p>Lorem ipsum<sup><a>[1]</a></sup> dolor sit amet, consectetur adipiscing elit. Nulla accumsan, metus ultrices eleifend gravida, nulla nunc varius lectus, nec rutrum justo nibh eu lectus. Ut vulputate semper dui. Fusce erat odio, sollicitudin vel erat vel, interdum mattis neque. Sub<sub>script</sub> works as well!</p>
+        <h2>Second level</h2>
+        <p>Curabitur accumsan turpis pharetra <strong>augue tincidunt</strong> blandit. Quisque condimentum maximus mi, sit amet commodo arcu rutrum id. Proin pretium urna vel cursus venenatis. Suspendisse potenti. Etiam mattis sem rhoncus lacus dapibus facilisis. Donec at dignissim dui. Ut et neque nisl.</p>
+        <ul>
+            <li>Thing one</li>
+            <li>Thing two</li>
+            <li>Thing three</li>
+            <li>Thing four</li>
+        </ul>
+
+       </div>
+
+</div>
