add - table population through brewery list objects

--- a/Brewery-Tracker/Brewery-Tracker/Views/Home/Breweries.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/Home/Breweries.cshtml
@@ -19,27 +19,29 @@
     </div>
 </section>
 
-<div class="container top-bot-space">
+<div class="top-bot-space">
     <div class="columns is-centered">
-        <div class="column">
-            <table class="table">
+        <div class="column is-half">
+            <table class="table is-bordered is-narrow is-hoverable is-fullwidth">
                 <thead>
                     <tr>
                         <th>ID</th>
-                        @*<th>Brewery</th>
+                        <th>Brewery</th>
+                        <th>City</th>
                         <th>State</th>
-                        <th>Rating</th>*@
+                        <th>Rating</th>
                     </tr>
                 </thead>
 
-                <tbody>
-                    @foreach (var brewery in Model.BreweryList)
+                <tbody class="is-centered">
+                    @foreach (var brewery in Model.AllBreweries)
                     {
                         <tr>
                             <td>@brewery.Brewery_ID</td>
-                            @*<td>@brewery.Brewery_Name</td>
+                            <td>@brewery.Brewery_Name</td>
+                            <td>@brewery.Brewery_City</td>
                             <td>@brewery.Brewery_State</td>
-                            <td>@brewery.Brewery_Rating</td>*@
+                            <td>@brewery.Brewery_Rating</td>
                         </tr>
                     }
                 </tbody>
@@ -48,32 +50,3 @@
         </div>
     </div>
 </div>
-
-
-<div class="column">
-    <div class="column is-half">
-        @Html.ListBox("breweryList", Model.BreweryList)
-    </div>
-</div>
-
-<div class="columns">
-    <div class="column">
-        <h2>Top Rated Brewery</h2>
-
-        <dl>
-            <dt>ID</dt>
-            <dd>@Model.TopRatedBrewery.Brewery_ID</dd>
-
-            <dt>Name</dt>
-            <dd>@Model.TopRatedBrewery.Brewery_Name</dd>
-
-            <dt>State</dt>
-            <dd>@Model.TopRatedBrewery.Brewery_State</dd>
-
-            <dt>Rating</dt>
-            <dd>@Model.TopRatedBrewery.Brewery_Rating</dd>
-        </dl>
-
-    </div>
-</div>
-
