--- a/Brewery-Tracker/Brewery-Tracker/Views/BreweriesCRUD/Index.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/BreweriesCRUD/Index.cshtml
@@ -5,66 +5,93 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table is-bordered is-narrow is-hoverable is-fullwidth">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Brewery_Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Brewery_Description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Brewery_Address)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Brewery_City)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Brewery_State)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Brewery_Zip)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Brewery_Rating)
-        </th>
-        <th></th>
-    </tr>
+<section class="hero is-dark">
+    <div class="hero-body">
+        <div class="container">
+            <h1 class="title name-font brand">
+                Breweries CRUD
+            </h1>
+            <h2 class="subtitle">
+                Add, Update, or Delete Breweries Here!
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Brewery_Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Brewery_Description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Brewery_Address)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Brewery_City)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Brewery_State)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Brewery_Zip)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Brewery_Rating)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Brewery_ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Brewery_ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Brewery_ID })
-        </td>
-    </tr>
-}
+            </h2>
+        </div>
+    </div>
+</section>
 
-</table>
+
+<div class="top-bot-space">
+    <div class="columns is-centered">
+        <div class="column is-half">
+            <p class="has-text-centered">
+                @Html.ActionLink("Create New", "Create")
+            </p>
+        </div>
+    </div>
+    <div class="columns is-centered">
+        <div class="column">
+            <table class="table is-bordered is-narrow is-hoverable is-fullwidth">
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Brewery_Name)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Brewery_Description)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Brewery_Address)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Brewery_City)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Brewery_State)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Brewery_Zip)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Brewery_Rating)
+                    </th>
+                    <th></th>
+                </tr>
+
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Brewery_Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Brewery_Description)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Brewery_Address)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Brewery_City)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Brewery_State)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Brewery_Zip)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Brewery_Rating)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Brewery_ID }) |
+                            @Html.ActionLink("Details", "Details", new { id = item.Brewery_ID }) |
+                            @Html.ActionLink("Delete", "Delete", new { id = item.Brewery_ID })
+                        </td>
+                    </tr>
+                }
+
+            </table>
+
+        </div>
+    </div>
+</div>
+
