add beers and brewery routes and list views

--- a/Brewery-Tracker/Brewery-Tracker/Views/Shared/_Layout.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/Shared/_Layout.cshtml
@@ -28,10 +28,10 @@
                 <a>@Html.ActionLink("Home", "Index", "Home", null, new { @class = "navbar-item item-line" })</a>
                 <a>@Html.ActionLink("About", "About", "Home", null, new { @class = "navbar-item item-line" })</a>
                 <a>@Html.ActionLink("Contact", "Contact", "Home", null, new { @class = "navbar-item item-line" })</a>
-                <a>@Html.ActionLink("Breweries", "Breweries", "Home", null, new { @class = "navbar-item item-line" })</a>
+                <a>@Html.ActionLink("Breweries", "Index", "Breweries1", null, new { @class = "navbar-item item-line" })</a>
                 @*old link*@
                 @*<a>@Html.ActionLink("Beers", "Beers", "Home", null, new { @class = "navbar-item item-line" })</a>*@
-                <a>@Html.ActionLink("Beers", "BeerList", "Beers", null, new { @class = "navbar-item item-line" })</a>
+                <a>@Html.ActionLink("Beers", "Index", "Beers1", null, new { @class = "navbar-item item-line" })</a>
             </div>
 
             <div class="navbar-end">
