--- a/Brewery-Tracker/Brewery-Tracker/Views/Breweries1/Create.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/Breweries1/Create.cshtml
@@ -15,6 +15,15 @@
     </div>
 </section>
 
+<div class="container">
+    <nav class="breadcrumb" aria-label="breadcrumbs">
+        <ul>
+            <li>@Html.ActionLink("Back to List", "Index")</li>
+            <li class="is-active"><a href="#" aria-current="page">Create New</a></li>
+        </ul>
+    </nav>
+</div>
+
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -107,6 +116,4 @@
         </div>
     </div>
 }
-        <div>
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+     
