start cleanup of view

--- a/Brewery-Tracker/Brewery-Tracker/Views/Beers1/Index.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/Beers1/Index.cshtml
@@ -22,7 +22,9 @@
 
 <section class="hero">
     <div class="hero-body">
-        @Html.ActionLink("Create New", "Create", new object { }, new { @class = "button is-link" })
+        <div class="has-text-centered">
+            @Html.ActionLink("Create New", "Create", new object { }, new { @class = "button is-link" })
+        </div>
     </div>
 </section>
 
