--- a/Brewery-Tracker/Brewery-Tracker/Views/Breweries1/Create.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/Breweries1/Create.cshtml
@@ -35,7 +35,7 @@
             <div class="card top-bot-space">
                 <header class="card-header">
                         <p class="card-header-title">
-                            Add a cool new, or an old favorite brewery here!
+                            Enter Brewery Information
                         </p>
                     </header>
                 <div class="card-content">
