--- a/Brewery-Tracker/Brewery-Tracker/Views/Beers1/Create.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/Beers1/Create.cshtml
@@ -31,7 +31,7 @@
         <div class="card top-bot-space">
             <header class="card-header">
                     <p class="card-header-title">
-                        Enter Beer Info
+                        Enter Beer Information
                     </p>
                 </header>
             <div class="card-content">
@@ -80,7 +80,7 @@
                             </div>
 
                             <div class="field">
-                                <label class="label">State</label>
+                                <label class="label">Brewery</label>
                                 <div class="field has-addons has-addons-left">
                                     <div class="control is-expanded">
                                         <div class="select is-fullwidth">
